<?xml version="1.0"?>
<package format="2">.
  <name>esr_msgs</name>
  <version>0.0.2</version>
  <description>Delphi ESR messages.</description>
  <maintainer email="jimmy@yen.me.uk">Jimmy Yen</maintainer>
  <author email="jimmy@yen.me.uk">Jimmy Yen</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
