<?xml version="1.0"?>
<package format="2">
  <name>helper</name>
  <version>0.0.0</version>
  <description>The helper package</description>

  <author email="huatsai.eed07g@nctu.edu.tw">HuaTsai</author>
  <maintainer email="huatsai.eed07g@nctu.edu.tw">HuaTsai</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
